...
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                _buildSectionTitle('Data Umum'),
                _buildTitle("Nama Kelurahan"),
                _buildTextField(
                  key: const Key('fieldNamaKelurahan'),
                  controller: controller.kelurahanController,
                  label: 'Contoh: Kelurahan Duriangkang',
                  validator: (value) => value!.isEmpty
                      ? 'Silahkan masukkan nama kelurahan'
                      : null,
                ),
                const SizedBox(height: 10),
                _buildTitle("Nama Kecamatan"),
                _buildTextField(
                  key: const Key('fieldNamaKecamatan'),
                  controller: controller.kecamatanController,
                  label: 'Contoh: Kecamatan Sei Beduk',
                  validator: (value) => value!.isEmpty
                      ? 'Silahkan masukkan nama kecamatan'
                      : null,
                ),
                const SizedBox(height: 10),
                _buildTitle("Kawasan"),
                _buildDropdownField(),
                const SizedBox(height: 10),
                _buildTitle("Nama Lokasi"),
                _buildTextField(
                  key: const Key('fieldNamaLokasi'),
                  controller: controller.lokasiController,
                  label: 'Contoh: Perumahan Mutiara Hijau',
                  validator: (value) =>
                      value!.isEmpty ? 'Silahkan masukkan nama lokasi' : null,
                ),
                const SizedBox(height: 10),
                _buildTitle("Alamat"),
                _buildTextField(
                  key: const Key('fieldAlamat'),
                  controller: controller.alamatController,
                  label: 'Contoh: Blok C2 No 15',
                  validator: (value) =>
                      value!.isEmpty ? 'Silahkan masukkan alamat' : null,
                ),
                const SizedBox(height: 10),
                _buildTitle("RT"),
                _buildTextField(
                  key: const Key('fieldRT'),
                  controller: controller.rtController,
                  label: 'Contoh: 003',
                  keyboardType: TextInputType.number,
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      return 'Silahkan masukkan nomor RT';
                    }
                    if (!RegExp(r'^\d{1,3}$').hasMatch(value)) {
...
                    return null;
                  },
                ),
                const SizedBox(height: 10),
                _buildTitle("RW"),
                _buildTextField(
                  key: const Key('fieldRW'),
                  controller: controller.rwController,
                  label: 'Contoh: 006',
                  keyboardType: TextInputType.number,
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      return 'Silahkan masukkan nomor RW';
                    }
                    if (!RegExp(r'^\d{1,3}$').hasMatch(value)) {
...
                    return null;
                  },
                ),
                const SizedBox(height: 10),
                _buildTitle("Panjang Bentuk"),
                _buildDecimalField(
                  key: const Key('fieldPanjangBentuk'),
                  controller: controller.panjangBentukController,
                  label: 'Contoh: 0.00079236174892200004',
                ),
                const SizedBox(height: 10),
                _buildTitle("Luas Bentuk"),
                _buildDecimalField(
                  key: const Key('fieldLuasBentuk'),
                  controller: controller.luasBentukController,
                  label: 'Contoh: 1.14035827148e-08',
                ),
                _buildTitle("Foto"),
                _buildFotoField(),
                _buildSectionTitle('Data Spasial'),
                _buildTitle("Titik Koordinat"),
                _buildKoordinatField(),
                const SizedBox(height: 20),
                Center(
                  child: SizedBox(
                    width: 150,
                    child: Obx(() => ElevatedButton(
                          key: const Key('btnSimpanUbahData'),
                          style: ElevatedButton.styleFrom(
                            backgroundColor: const Color(0xFF92E3A9),
                            padding: const EdgeInsets.symmetric(vertical: 15),
                            elevation: 10,
                            shape: RoundedRectangleBorder(
                              borderRadius: BorderRadius.circular(40),
...
                                    strokeWidth: 4,
                                    valueColor: AlwaysStoppedAnimation<Color>(
                                        Colors.white),
                                  ),
                                )
                              : const Text(
                                  'Simpan',
                                  style: TextStyle(
                                    fontSize: 16,
                                    fontWeight: FontWeight.w600,
                                    color: Colors.black,
                                  ),
                                ),
...
    return DropdownButtonFormField<String>(
      value: controller.kawasanController.text.isNotEmpty
          ? controller.kawasanController.text
          : null,
      items: const [
        DropdownMenuItem(
          value: 'Kawasan Pengembang',
          child: Text(
            'Kawasan Pengembang',
            style: TextStyle(
              color: Colors.black,
              fontFamily: 'Poppins',
              fontWeight: FontWeight.w400,
              fontSize: 15,
            ),
          ),
        ),
        DropdownMenuItem(
          value: 'Kawasan Non Pengembang',
          child: Text(
            'Kawasan Non Pengembang',
            style: TextStyle(
              color: Colors.black,
              fontFamily: 'Poppins',
              fontWeight: FontWeight.w400,
...
            ),
          ),
        ),
      ],
      onChanged: (value) => controller.kawasanController.text = value!,
      decoration: InputDecoration(
        labelText: 'Jenis Kawasan',
        labelStyle: GoogleFonts.poppins(
          fontWeight: FontWeight.w400,
          fontSize: 15,
          color: Colors.black,
        ),
        filled: true,
...
              ),
            ),
            const SizedBox(height: 8),
            // Tambahkan di dalam _buildFotoField atau sejenisnya
            if (const bool.fromEnvironment('TEST_MODE')) ...[
              ElevatedButton(
                key: const Key('btnMockUbahFoto'),
                onPressed: () async {
                  try {
                    final byteData =
                        await rootBundle.load('assets/images/test-mock-2.jpg');

                    final tempDir = await getTemporaryDirectory();
...

  Widget _buildKoordinatField() {
    return _buildTextField(
      controller: controller.titikKoordinatController,
      label: 'Titik Koordinat',
      readOnly: true,
      key: const Key('btnUbahKoordinat'),
      validator: (value) => value == null || value.isEmpty
          ? 'Silahkan masukkan Titik Koordinat'
          : null,
      onTap: () async {
        final result = await Navigator.push(
          context,
...
