...
                                  key: _formKey,
                                  child: Column(
                                    mainAxisSize: MainAxisSize.min,
                                    children: [
                                      const SizedBox(height: 10),
                                      const Text(
                                        'Masuk',
                                        style: TextStyle(
                                          fontSize: 28,
                                          fontWeight: FontWeight.w600,
                                          color: Color(0xFF358666),
                                        ),
                                      ),
                                      const SizedBox(height: 20),
                                      // Dropdown untuk memilih peran
                                      DropdownButtonFormField<String>(
                                        key: const Key('roleDropdown'),
                                        value: selectedRole,
                                        hint: Text(
                                          "Pilih Peran",
                                          style: GoogleFonts.poppins(
                                              color: Colors.black,
                                              fontSize: 15,
                                              fontWeight: FontWeight.w400),
                                        ),
                                        items:
                                            ['Pengguna', 'Admin'].map((role) {
                                          return DropdownMenuItem<String>(
                                            value: role,
                                            child: Text(
                                              role,
                                              style: GoogleFonts.poppins(
                                                color: Colors.black,
...
                                          ),
                                        ),
                                      ),
                                      const SizedBox(height: 20),
                                      // Input email
                                      TextFormField(
                                        key: const Key('emailField'),
                                        controller: controller.emailController,
                                        keyboardType:
                                            TextInputType.emailAddress,
                                        decoration: InputDecoration(
                                          prefixIcon: const Icon(
                                              Icons.email_outlined,
...
                                          return null;
                                        },
                                      ),
                                      const SizedBox(height: 20),
                                      // Input password
                                      TextFormField(
                                        key: const Key('passwordField'),
                                        controller:
                                            controller.kataSandiController,
                                        obscureText: _isObscure,
                                        decoration: InputDecoration(
                                          prefixIcon: const Icon(
                                              Icons.lock_outline,
...
