...
                                }
                              }
                            },
                          ),
                        ),
                        IconButton(
                          key: const Key('closeBottomSheet'),
                          icon: const Icon(Icons.close, color: Colors.black),
                          onPressed: () {
                            _controller.searchController.clear();
                            setState(() {
                              _suggestions = [];
                            });
...
                  : () {
                      Navigator.pushNamed(context, '/tambah-data');
                    },
              icon: const Icon(Icons.add_location_alt,
                  color: Colors.black, size: 18),
              label: const Text(
                'Tambah Data',
                style: TextStyle(
                    fontWeight: FontWeight.w500,
                    fontSize: 14,
                    color: Colors.black),
              ),
              style: ElevatedButton.styleFrom(
...
            left: 0,
            right: 0,
            child: Center(
              child: SizedBox(
                width: 200,
                child: ElevatedButton.icon(
                  key: const Key('btnKonfirmasiKoordinat'),
                  onPressed: widget.isKonfirmasiKoordinat
                      ? null
                      : () {
                          final result = _controller.saveLocation();
                          if (result != null) {
                            Navigator.pop(context, result);
...
      context: context,
      shape: const RoundedRectangleBorder(
        borderRadius: BorderRadius.vertical(top: Radius.circular(16)),
      ),
      builder: (BuildContext context) {
        return DetailDataBottomSheet(
            key: const Key('bottomSheetDetailData'), data: data);
      },
    );
  }
}

