...
                    });
                  },
                  // Konten Onboarding Slide 1, 2, dan 3
                  children: [
                    _buildPage(
                      image: 'assets/images/onboarding/onboarding-1.png',
                      title: "Selamat Datang di Geoportal!",
                      description:
                          "\"Jelajahi, analisis, dan unduh data geospasial dengan mudah di Geoportal. Mari mulai perjalanan Anda!\"",
                    ),
                    _buildFeaturePage(
                      image: 'assets/images/onboarding/onboarding-2.png',
                      title: "Jelajahi dan Akses\nData Spasial!",
...
                          horizontal: 30, vertical: 15),
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(30),
                      ),
                    ),
                    child: Text(
                      _currentPage == 2 ? 'Mulai Sekarang' : 'Selanjutnya',
                      style: TextStyle(
                          color:
                              _currentPage == 2 ? Colors.black : Colors.white),
                    ),
                  ),
                ],
...
